--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Writings-of-Samuel-Adams-Volume-4_2094
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   creator:
     editor:
@@ -8,6 +8,9 @@ contributor:
       deathdate: 1955
       gutenberg_agent_id: '34142'
       url: http://www.gutenberg.org/2009/agents/34142
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Adams, Samuel
@@ -17,6 +20,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/821
     wikipedia: http://en.wikipedia.org/wiki/Samuel_Adams
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2094#The-Writings-of-Samuel-Adams-Volume-4
 gutenberg_issued: '2000-03-01'
 gutenberg_type: Text
 identifiers:
